[gd_scene load_steps=14 format=3 uid="uid://dsf2vadkpiaro"]

[ext_resource type="Script" path="res://enemy.gd" id="1_f7ccc"]
[ext_resource type="Texture2D" uid="uid://b1wbovrnckkll" path="res://sprites/enemy_spritesheet.png" id="2_fxcd2"]
[ext_resource type="Script" path="res://scripts/myhitbox.gd" id="3_juq56"]
[ext_resource type="Script" path="res://scripts/myhurtbox.gd" id="4_24ll2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsips"]
size = Vector2(13.5, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aytn6"]
size = Vector2(32, 47)

[sub_resource type="Animation" id="Animation_7u7p0"]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_5ybh4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k26nf"]
resource_name = "Walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hjr10"]
_data = {
"Attack": SubResource("Animation_7u7p0"),
"RESET": SubResource("Animation_5ybh4"),
"Walk": SubResource("Animation_k26nf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sa1gh"]
size = Vector2(40.5, 71)

[sub_resource type="CircleShape2D" id="CircleShape2D_4vxk8"]
radius = 186.172

[sub_resource type="CircleShape2D" id="CircleShape2D_6ot3g"]
radius = 63.0714

[node name="Enemy2D" type="CharacterBody2D"]
script = ExtResource("1_f7ccc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_fxcd2")
hframes = 5
frame = 3

[node name="HitBox" type="Area2D" parent="Sprite2D"]
script = ExtResource("3_juq56")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HitBox"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_wsips")
disabled = true

[node name="HurtBox" type="Area2D" parent="Sprite2D"]
script = ExtResource("4_24ll2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
visible = false
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_aytn6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hjr10")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.75, 0.5)
shape = SubResource("RectangleShape2D_sa1gh")

[node name="detection_radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource("CircleShape2D_4vxk8")

[node name="attack_radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_radius"]
shape = SubResource("CircleShape2D_6ot3g")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="detection_radius" to="." method="_on_detection_radius_body_exited"]
[connection signal="body_entered" from="attack_radius" to="." method="_on_attack_radius_body_entered"]
